Bug 97710 - SVG import cant fill overlapped polyline
Summary: SVG import cant fill overlapped polyline
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.0.6.2 release
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: filter:svg
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2016-02-10 15:17 UTC by Yousuf Philips (jay) (retired)
Modified: 2023-09-29 08:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
LibreOffice vs Opera (17.39 KB, image/png)
2016-02-10 15:17 UTC, Yousuf Philips (jay) (retired)
Details
min sample (504 bytes, image/svg+xml)
2019-09-20 12:24 UTC, Xisco Faulí
Details
screenshot (172.31 KB, image/png)
2023-09-28 17:31 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2016-02-10 15:17:03 UTC
Created attachment 122499 [details]
LibreOffice vs Opera

Steps:
1) Open Writer
2) Insert https://dev.w3.org/SVG/tools/svgweb/samples/svg-files/shapes-polyline-01-t.svg
3) Notice that there is no filling for the top right shape

Relevant SVG code: <polyline id="polyline-03" fill="blue" stroke="#00FF00" stroke-width="4"  points="310,50,335,150,360,50,385,150,410,50,435,150"/>

The SVG has another polyline with a fill and stroke (polyline-05) and it fills it as the fill area doesnt intersect with the polyline lines.

Version: 5.2.0.0.alpha0+
Build ID: fea95da81260bc7eabe7ece595829009b2db3e62
CPU Threads: 2; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-02-10_01:41:22
Locale: en-US (en_US.UTF-8)
Comment 1 Buovjaga 2016-02-12 15:11:28 UTC
Confirmed.

Win 7 Pro 64-bit Version: 5.2.0.0.alpha0+
Build ID: a6f876d45bd4e41a7143594a6cb11b6893a0f620
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-02-11_00:07:38
Locale: fi-FI (fi_FI)
Comment 2 QA Administrators 2017-03-06 14:57:51 UTC Comment hidden (obsolete)
Comment 3 Roman Kuznetsov 2018-06-20 13:14:04 UTC
still repro in LibreOffice 6.1 beta 2
Comment 4 QA Administrators 2019-06-21 02:53:33 UTC Comment hidden (obsolete)
Comment 5 Xisco Faulí 2019-09-20 12:24:09 UTC
Created attachment 154319 [details]
min sample
Comment 6 QA Administrators 2021-09-20 03:42:01 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2023-09-21 03:15:56 UTC Comment hidden (obsolete)
Comment 8 Xisco Faulí 2023-09-21 05:07:29 UTC
Still reproducible in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1e4401dfbe7631de5de04960bebb72537618033
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 9 Commit Notification 2023-09-26 19:53:58 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ee9b13668cf955d2f3ad927f26bf3e1910779047

tdf#97710: do not create nonzero conform for polyline

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 BogdanB 2023-09-28 17:31:53 UTC
Created attachment 189871 [details]
screenshot

Thanks, Xisco, for this fix.
Verified with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bbe4d3498c2f994342b4d213f0ae874e7b0b7775
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Was bad in 7.5 (for reference), see screenshot
Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 11 Commit Notification 2023-09-29 08:40:36 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/35f19e5cb93ce218787904e99c2bedfd40e725cc

tdf#97710: do not create nonzero conform for polyline

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.