tdf#97710: do not create nonzero conform for polyline

Change-Id: Ib9d4e957b83ad84b79ae4ade5c6be3ab3d9d8028
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157286
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>